Add support for collection arrays as parameters